--- a/desafio12/index.html
+++ b/desafio12/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
      <header> 
-        <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_bland"> Milton Duarte</a></p>
+        <h1>
+          Cordel Moderno
+        </h1>
+        <p>
+          Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_bland">Milton Duarte</a>
+        </p>
         
     </header>
    <section class="normal"> 
@@ -26,7 +30,7 @@
     </section>
    
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
       <p>
         Não é mais como era antes <br>
         É tudo abreviado <br>
@@ -40,7 +44,7 @@
 
   
 
-  <section class="normal">  
+  <section class="normal" >  
     <p>
         Arroba agora não pesa <br>
     É parte de um endereço <br>
@@ -63,7 +67,7 @@
 </section>
 
 
-   <section class="imagem">
+   <section class="imagem" id="img02">
     <p>
     Tenho saudade das cartas <br>
     Escritas com a própria mão <br>
